Map the appropriate medication request to the condition extensions array based on medication statement mood code.